# 3dobs

./: .gitignore  3dobjs.desktop  Cargo.toml  README.md  TODO.md  build.rs
shaders/: frag.glsl  grid_f.glsl  grid_v.glsl  light_f.glsl  vertex.glsl
src/: aabb.rs  camera.rs  ipc.rs  lib.rs  log.rs  logger.rs  main.rs  mesh.rs  model.rs  shader.rs  utils.rs
src/imgui-glfw-support/: mod.rs
src/imgui-opengl-renderer/: mod.rs
src/importer/: collada.rs  fbx.rs  mod.rs  obj.rs  stl.rs
src/ui/: docking.rs  mod.rs  ui.rs
