[package]
name = "threedobs"
version = "0.1.1"
description = "3dobs is a simple OBJ and STL viewer"
authors = ["IllusionMan1212"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
glad-gl = { path = "./3rdparty/glad-gl" }
image = "0.24.6"
glm = "0.2.3"
mint = "0.5.9"
anyhow = "1.0.71"
rfd = "0.11.3"
bincode = "1.3.3"
fs4 = "0.7.0"

[dependencies.imgui]
version = "0.11.0"
features = ["docking", "tables-api"]
